infra/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: ticketing, namespace: ticketing }
spec:
  rules:
    - host: ticketing.dev.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend: { service: { name: gateway, port: { number: 3000 } } }
          - path: /
            pathType: Prefix
            backend: { service: { name: front, port: { number: 80 } } }
